infras/k8s/notification-manifests/notification-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: notification-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      imagePullSecrets:
        - name: authenticate-registry
      hostAliases:
        - ip: "192.168.73.101"
          hostnames:
          - "gitlab.taskscheduler.com"
      containers:
        - name: notification
          image: longle2003/notification
---
apiVersion: v1
kind: Service
metadata:
  name: notification-srv
spec: 
  selector:
    app: notification
  ports:
    - name: notification
      protocol: TCP
      port: 4009
      targetPort: 4009
