infras/k8s/notification-manifests/notification-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    # konghq.com/protocols: https
    konghq.com/methods: GET,POST,PUT,DELETE
spec:
  ingressClassName: kong
  rules:
    - http:
        - path: /api/notification/
          pathType: Prefix
          backend:
            service:
              name: notification-srv
              port:
                number: 4009
